Se agrego el saludo de los fundadores y se hicierron correciones en los saludos del text

--- a/css/style.css
+++ b/css/style.css
@@ -194,11 +194,6 @@ main{
     "tipo texto texto texto"; 
 }
 
-.presentacion .caja_texto{
-    overflow: hidden;
-}
-
-
 .caja_texto .tipo_text{
     width: 40px;
     height: 200px;
@@ -229,7 +224,7 @@ main{
     font-size: 20px;
 }
 
-.presentacion .caja_texto .text,.datos .caja_texto .text{
+.datos .caja_texto .text{
     overflow: hidden;
 }
 
@@ -1826,9 +1821,6 @@ body::-webkit-scrollbar-track,.resultados_miembros::-webkit-scrollbar-track,.lis
         height: 40vh;
         font-size: 40px;
     }
-    .presentacion .caja_texto{
-        height: 60vh;
-    }
     .caja_texto .text{
         padding: 5px 0px 5px 30px;
     }
@@ -1943,11 +1935,8 @@ body::-webkit-scrollbar-track,.resultados_miembros::-webkit-scrollbar-track,.lis
     }
     
     .presentacion .header_titulo{
-        height: 25vh;
+        height: 20vh;
         font-size: 20px;
-    }
-    .presentacion .caja_texto{
-        height: 60vh;
     }
     .caja_texto .text{
         padding: 0px 5px ;
@@ -2116,8 +2105,9 @@ body::-webkit-scrollbar-track,.resultados_miembros::-webkit-scrollbar-track,.lis
     .logo_titulo {
         font-size: 45px;
     }
-    .presentacion .header_titulo{
-        height: 20vh;
+    .presentacion .caja_texto .text{
+        height: 70vh;
+        overflow-y: auto;
     }
     .caja_texto .text .text_editors{
         padding: 10px 0px;
